rust/transpiler/snapshots/basic@whitespace@injections.snap
---
source: transpiler/tests/golden_tests.rs
expression: "serde_json::json!({\n    \"ranges\": result.ranges, \"injections\": result.injections,\n})"
input_file: transpiler/tests/basic/whitespace.hyper
---
injections: []
ranges:
  - compiled_end: 24
    compiled_start: 15
    range_type: Python
    source_end: 9
    source_start: 0
