rust/transpiler/snapshots/basic@whitespace@output.snap
---
source: transpiler/tests/golden_tests.rs
expression: r.code.trim()
input_file: transpiler/tests/basic/whitespace.hyper
---
def Whitespace(name: str) -> str:
    _parts = []
    _parts.append("""<div>After blank lines</div><span>Between blank lines</span><p>More content</p>""")
    return "".join(_parts)
