rust/transpiler/snapshots/components@edge_cases@output.snap
---
source: transpiler/tests/golden_tests.rs
expression: r.code.trim()
input_file: transpiler/tests/components/edge_cases.hyper
---
def EdgeCases(module: object, components: dict) -> str:
    _parts = []
    _parts.append(module.Button(label="Click"))
    _child_parts = []
    _child_parts.append("<p>")
    _child_parts.append("Content")
    _child_parts.append("</p>")
    _parts.append(components['Card'](_children="".join(_child_parts)))
    _parts.append(Wrapper())
    _parts.append(Container())
    _child_parts = []
    _parts.append(Outer(_children="".join(_child_parts)))
    return "".join(_parts)
