rust/transpiler/snapshots/components@nested@output.snap
---
source: transpiler/tests/golden_tests.rs
expression: r.code.trim()
input_file: transpiler/tests/components/nested.hyper
---
from hyper import escape

def Nested(title: str, items: list) -> str:
    _parts = []
    _child_parts = []
    _parts.append(Card(_children="".join(_child_parts)))
    if title:
        _child_parts = []
        _child_parts.append("<span>")
        _child_parts.append(escape(title))
        _child_parts.append("</span>")
        _parts.append(Alert(type="info", _children="".join(_child_parts)))
    for item in items:
        _child_parts = []
        _child_parts.append(escape(item))
        _parts.append(Badge(color="blue", _children="".join(_child_parts)))
    return "".join(_parts)
