rust/transpiler/snapshots/components@self_closing@injections.snap
---
source: transpiler/tests/golden_tests.rs
expression: "serde_json::json!({\n    \"ranges\": result.ranges, \"injections\": result.injections,\n})"
input_file: transpiler/tests/components/self_closing.hyper
---
injections: []
ranges:
  - compiled_end: 25
    compiled_start: 16
    range_type: Python
    source_end: 9
    source_start: 0
  - compiled_end: 42
    compiled_start: 27
    range_type: Python
    source_end: 25
    source_start: 10
  - compiled_end: 55
    compiled_start: 44
    range_type: Python
    source_end: 37
    source_start: 26
