rust/transpiler/snapshots/components@self_closing@output.snap
---
source: transpiler/tests/golden_tests.rs
expression: r.code.trim()
input_file: transpiler/tests/components/self_closing.hyper
---
def SelfClosing(name: str, onClick: object, props: dict) -> str:
    _parts = []
    _parts.append(Button())
    _parts.append(Button(label="Click me"))
    _parts.append(Button(label=name, onClick=onClick))
    _parts.append(Button())
    _parts.append(Icon(name="star", size=24, ))
    return "".join(_parts)
