rust/transpiler/snapshots/components@with_slot@injections.snap
---
source: transpiler/tests/golden_tests.rs
expression: "serde_json::json!({\n    \"ranges\": result.ranges, \"injections\": result.injections,\n})"
input_file: transpiler/tests/components/with_slot.hyper
---
injections:
  - end: 10
    prefix: "from hyper import escape\n\ndef WithSlot("
    start: 0
    suffix: ") -> str:\n    _parts = []\n    _child_parts = []\n    _child_parts.append(\"<h2>\")\n    _child_parts.append(escape(title))\n    _child_parts.append(\"</h2>\")\n    _child_parts.append(\"<p>\")\n    _child_parts.append(\"Card content goes here\")\n    _child_parts.append(\"</p>\")\n    _parts.append(Card(_children=\"\".join(_child_parts)))\n    return \"\".join(_parts)\n"
    type: python
ranges:
  - compiled_end: 49
    compiled_start: 39
    range_type: Python
    source_end: 10
    source_start: 0
